--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -76,7 +76,7 @@ target_link_libraries(${UNIT_TEST_MODULE} PRIVATE
 
 # There is an inconsistency in clang/gcc application of this - make it explicit
 target_compile_options(${UNIT_TEST_MODULE} PRIVATE -Wunused-parameter)
-file(COPY data/ DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_data)
+file(COPY data/ DESTINATION ${CMAKE_BINARY_DIR}/test_data)
 
 add_dependencies(${UNIT_TEST_MODULE} hestia_mock_phobos_plugin hestia_mock_s3_plugin)
 
