Add support for config files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ endif()
 add_subdirectory(base)
 add_subdirectory(data_placement_engine)
 add_subdirectory(event_feed)
-add_subdirectory(key_value_store)
+add_subdirectory(hsm_key_value_store)
 add_subdirectory(hsm_object_store)
 add_subdirectory(hsm_service)
 add_subdirectory(hestia_client)
