--- a/test/data/configs/hestia.yaml
+++ b/test/data/configs/hestia.yaml
@@ -49,6 +49,7 @@ key_value_store:
 
 key_value_store_clients:
   - identifier: hestia::FileKeyValueStoreClient
+    root: key_value_store
 
 tier_registry:
   - identifier: 0
