--- a/test/utils/CMakeLists.txt
+++ b/test/utils/CMakeLists.txt
@@ -9,10 +9,13 @@ add_module(
         MockWebView.h
         TestContext.h
         TestUtils.h
+      #  HsmTestContext.h
     SOURCES
         TestContext.cc
+       # HsmTestContext.cc
     INTERNAL_DEPENDENCIES 
         web
+        hsm_object_store_client
 )
 
 target_include_directories(hestia_test_utils PRIVATE ${PROJECT_BINARY_DIR})
