--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -78,7 +78,19 @@ target_code_coverage(hestia_common)
 target_code_coverage(hestia_server)
 target_code_coverage(hestia_storage)
 target_code_coverage(hestia_mock_phobos_plugin)
+if(NOT APPLE AND ${HESTIA_WITH_PHOBOS})
+target_code_coverage(hestia_phobos_plugin)
+endif()
+target_code_coverage(hestia_mock_motr_plugin)
+
+if(${HESTIA_WITH_MOTR})
+target_code_coverage(hestia_motr_plugin)
+endif()
+
 target_code_coverage(hestia_mock_s3_plugin)
+target_code_coverage(hestia_s3_plugin)
+target_code_coverage(hestia_main)
+target_code_coverage(hestia_lib)
 
 target_code_coverage(${UNIT_TEST_MODULE})
 catch_discover_tests(${UNIT_TEST_MODULE})
