--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,4 +162,4 @@ E2E_test:
     - *update_distro
     - yum install -qy $(cat ${HESTIA_DEPS}/e2e_test);
   script:
-    - python3 ${CI_PROJECT_DIR}/test/e2e_tests/run_e2e_tests.py --source_dir=${CI_PROJECT_DIR} --build_dir=${CMAKE_BUILD_DIR} --do_install=True --package_name=${CMAKE_BUILD_DIR}/hestia-0.0.1-Linux.rpm
+    - python3 ${CI_PROJECT_DIR}/test/e2e_tests/run_e2e_tests.py --source_dir=${CI_PROJECT_DIR} --build_dir=${CMAKE_BUILD_DIR} --package_name=${CMAKE_BUILD_DIR}/hestia-0.0.1-Linux.rpm
