--- a/infra/cmake/hestiaConfig.cmake.in
+++ b/infra/cmake/hestiaConfig.cmake.in
@@ -6,5 +6,6 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_dependency(Threads REQUIRED)
 find_dependency(OpenSSL REQUIRED)
 find_dependency(LibXml2 REQUIRED)
+find_dependency(CURL REQUIRED)
 
 include("${CMAKE_CURRENT_LIST_DIR}/hestiaTargets.cmake")
