--- a/src/event_feed/CMakeLists.txt
+++ b/src/event_feed/CMakeLists.txt
@@ -4,8 +4,12 @@ add_module(
     MODULE_NAME event_feed 
     HEADERS
         EventFeed.h
+        RbhEvent.h
     SOURCES
         EventFeed.cc
+        RbhEvent.cc
     DEPENDENCIES
         hestia::hestia
+    INTERNAL_DEPENDENCIES
+        common
 )
