--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -26,6 +26,7 @@ set(UNIT_TEST_SOURCES
     base/web/TestS3WebApp.cc
     base/web/TestS3Authorization.cc
     hestia/TestHestiaCppClient.cc
+    hestia/TestHestiaService.cc
     hsm/TestEventFeed.cc
     hsm/TestMockMotrBackend.cc
     hsm/TestMockMotrHsm.cc
